增加数组和列表的区别

--- a/DataStructure/2_数组和列表.md
+++ b/DataStructure/2_数组和列表.md
@@ -12,5 +12,9 @@
     List在进行查询的时候速度较快,但是在进行删(remove)增(add)的时候,速度较慢,所花费的时间复杂度是比较大的
     但是在尾部删(pop)增(append)速度较快
  
+ 
+ # 数组和列表的区别
+   Array数组长度是预先分配好的,并且存储的都是统一数据类型,---便于科学计算
+   List则是不要求预先固定长度和可以存储不同类型
 # array实现(python方式)
    参考: 2_数组和列表.py
