基于双端队列实现栈

--- a/DataStructure/6_栈.md
+++ b/DataStructure/6_栈.md
@@ -1,4 +1,19 @@
-# 栈
-单向的队列,只有一个方向可以进出,其实就是受限的双端队列(因为只有一头可以进出,不是受限的普通队列)
-# 实现方法
+# 双端队列与栈
+![双端队列与栈](https://blog-1-1256491104.cos.ap-chengdu.myqcloud.com/20190803193104.png)# 实现方法
+栈就是受限的双端队,也就是在某一端进行读和取.
+
+# stack over flow 与stackoverflow
+(1)stackoverflow:学习网站
+(2)stack over flow --栈溢出
+如果写一个没有出口的递归函数,
+```
+def infinite_fib(n):
+    return infinite_fib(n-1) + infinite_fib(n-2)
+infinite_fib(10)
+```
+当一大段输出之后就会出现异常： RecursionError: maximum recursion depth exceeded,原因就是
+  因为是递归函数,因此在进行递归对时候,系统就会分配临时变量--但是由于该函数没有出口,只能一直递归,一直分配临时变量,但是系统分配给栈区的大小是固定有限的,因此就会出现那个错误(RecursionError)
+
+# 栈的实现方法
+(关键CircularDoubleLinkedList存取的复杂度都是常数级别)
 CircularDoubleLinkedList 实现 双端队列 Deque ，并且用 Deque 实现 Stack,为了学习数据结构的实现就避免了直接使用内置方法deque.
