算法与数据结构

--- a/DataStructure/2_数组和列表.md
+++ b/DataStructure/2_数组和列表.md
@@ -9,7 +9,7 @@
    ![List每个操作的时间复杂度-1](https://blog-1-1256491104.cos.ap-chengdu.myqcloud.com/20190712132254.png)
     ![List每个操作的时间复杂度-2](https://blog-1-1256491104.cos.ap-chengdu.myqcloud.com/20190712132330.png)
  结论我们可以看到:
-    List在进行查询的时候速度较快,但是在进行删(remove)增(add)的时候,速度较慢,所花费的时间复杂度是比较大的
+    List在进行查询的时候速度较快,但是在进行删(removeNode)增(add)的时候,速度较慢,所花费的时间复杂度是比较大的
     但是在尾部删(pop)增(append)速度较快
  
  
